# kindertip-data

./: 01-generate_df.ipynb  Untitled.ipynb  prediction.ipynb  pyproject.toml
data/: diary.json  meals.parquet  meals_with_recipes.parquet  tags.json
scripts/: generate_recipes.py
